# junkyard

./: README.md
biztalk/t4-pipeline/: T4Pipeline.sln  readme.md
biztalk/t4-pipeline/BizTalk.T4PipelineComponent/: BizTalk.T4PipelineComponent.csproj  CustomTemplateHost.cs  NewBaseCustomTypeDescriptor.cs  NewPropertyDescriptor.cs  PropertyDescriptorAttribute.cs  PropertyNameAttribute.cs  T4TemplaterPipelineComponent.cs
biztalk/t4-pipeline/BizTalk.T4PipelineDemo/: BizTalk.T4PipelineDemo.btproj  T4TemplaterSendPipeline.btp.cs
biztalk/t4-pipeline/BizTalk.T4PipelineDemo/Schema/: SendEmail.xsd  (+3 more)
biztalk/t4-pipeline/Items/: T4Pipeline.snk  T4PipelineDemo.BindingInfo.xml
c/algo/: .cproject  Makefile  multiply  multiply.c
c/better_structure/: Makefile  better  better.c
c/bls/: Makefile  bls.out
c/bls/include/: allheads.h  logger.h
c/bls/src/: logger.c  main.c
c/do_lots/: error_print.c  makefile
c/gdb/: Makefile  stddev_bugged
c/make/house/: Makefile
c/microhttpd/: CMakeLists.txt  Makefile  hellobrowser.c  makefile
c/seething/: Makefile  seething
c/seething/include/: allheads.h  logger.h
c/seething/src/: logger.c  main.c
java/ant-spike/: build.number  build.properties  build.xml
java/servlet-adventure/: pom.xml
latex/: .gitignore
latex/cheatsheets/: __latexindent_temp.tex  git-cheatsheet.tex  readme.md
latex/cv/: README.md  yaac-another-awesome-cv.cls
latex/cv/benjaminsimmonds/: Makefile  cv.tex  section_headline_archi.tex
latex/essays/201809-cybersec-cno-strategy/: cybersec-cno-strategy-essay.tex
rust/learning/hello/: hello  hello.rs
(+45 files in other folders)
